--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  image: MyString
+  attachment: MyString
   title: MyString
   event: one
 
 two:
-  image: MyString
+  attachment: MyString
   title: MyString
   event: two
